--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
+node_modules/ 
+npm-debug.log* 
+yarn-debug.log* 
 yarn-error.log*
+
+# Personal files to ignore
+Notes about gitignore.txt
 
 # Expo
 .expo/
